--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
 name = "type-parse"
-version = "0.1.0"
+version = "0.1.1"
 description = "Parse the markup language with Python type hints."
 authors = ["nahco314 <nahco3_ta@yahoo.co.jp>"]
 license = "MIT"
 readme = "README.md"
+include = ["py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.8.1"
